--- a/src/Template/cup/form-image.twig
+++ b/src/Template/cup/form-image.twig
@@ -12,10 +12,10 @@
         <div data-fileimage class="row">
             <div class="col-md-12">
                 {% include 'cup/form.twig' with {
-                    'label': multiple ? 'Изображения'|locale : 'Изображение'|locale,
+                    'label': multiple ? 'Images'|locale : 'Image'|locale,
                     'type': 'file',
                     'name': 'files[]',
-                    'postfix': multiple ? '<i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" title="' ~ ('Здесь можно выбрать несколько изображений')|locale ~ '"></i>' : '',
+                    'postfix': multiple ? '<i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" title="' ~ ('Multiple images can be selected here')|locale ~ '"></i>' : '',
                     'args': {
                         'class': ['d-block', 'btn', 'btn-sm', 'bg-grey2'],
                         'multiple': multiple,
