--- a/src/Template/cup/form-meta.twig
+++ b/src/Template/cup/form-meta.twig
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-md-4">
         {% include 'cup/form.twig' with {
-            'label': 'Метатег Title'|locale,
+            'label': 'Meta tag Title'|locale,
             'type': 'text',
             'name': 'meta[title]',
             'args': {
@@ -11,7 +11,7 @@
     </div>
     <div class="col-md-4">
         {% include 'cup/form.twig' with {
-            'label': 'Метатег Description'|locale,
+            'label': 'Meta tag Description'|locale,
             'type': 'text',
             'name': 'meta[description]',
             'args': {
@@ -21,7 +21,7 @@
     </div>
     <div class="col-md-4">
         {% include 'cup/form.twig' with {
-            'label': 'Метатег Keywords'|locale,
+            'label': 'Meta tag Keywords'|locale,
             'type': 'text',
             'name': 'meta[keywords]',
             'args': {
