--- a/src/Template/cup/form-save.twig
+++ b/src/Template/cup/form-save.twig
@@ -1,5 +1,5 @@
 <button type="submit" name="save" value="exit" class="btn btn-primary" style="height: 40px;">
-    {{ 'Сохранить'|locale }}
+    {{ 'Save'|locale }}
 </button>
 <button type="submit" name="save" class="btn btn-info btn-icon">
     <i class="fas fa-save"></i>
