--- a/src/Template/cup/form-tags.twig
+++ b/src/Template/cup/form-tags.twig
@@ -9,11 +9,11 @@
         <div class="col-md-12">
             <div data-input="" class="form-group">
                 <label class="placeholder">
-                    <b>{{ 'Теги'|locale }}</b>
+                    <b>{{ 'Tags'|locale }}</b>
                 </label>
 
                 <div>
-                    <input id="tagsinput-{{ inputId }}" class="form-control" type="text" name="tags" placeholder="{{ 'Добавьте теги'|locale }}" value="{{ args.value }}">
+                    <input id="tagsinput-{{ inputId }}" class="form-control" type="text" name="tags" placeholder="{{ 'Add tags'|locale }}" value="{{ args.value }}">
                 </div>
             </div>
         </div>
