--- a/src/Template/cup/form.twig
+++ b/src/Template/cup/form.twig
@@ -1,11 +1,11 @@
 {#
-    label - ярлык поля
-    name - имя поля
-    type - тип поля
-    args - аргументы поля
-    message - сообщение
-    prefix - префикс перед полем
-    postfix - постфикс после поля
+    label - field label
+    name - field name
+    type - field tyoe
+    args - other arguments
+    message - additional bottom message
+    prefix - bootstrap prefix
+    postfix - bootstrap postfix
 #}
 {% block input %}
     {% if name is empty %}
