--- a/src/Template/cup/form/view/list.twig
+++ b/src/Template/cup/form/view/list.twig
@@ -4,7 +4,7 @@
     <div class="page-inner py-5">
         <div class="d-flex align-items-left align-items-md-center flex-column flex-md-row">
             <div>
-                <h2 class="text-white pb-2 fw-bold">{{ 'Список полученных заявок'|locale }} ({{ list.count() }})</h2>
+                <h2 class="text-white pb-2 fw-bold">{{ 'List of applications received'|locale }} ({{ list.count() }})</h2>
             </div>
         </div>
     </div>
@@ -25,7 +25,7 @@
                     {% embed 'mixin/datatable.twig' %}
                         {% block thead %}
                             <tr>
-                                <th>{{ 'Дата получения'|locale }}</th>
+                                <th>{{ 'Date received'|locale }}</th>
                                 <th width="25%" class="text-center no-sorting"></th>
                             </tr>
                         {% endblock %}
@@ -37,15 +37,15 @@
                                         {{ item.date|df }}
                                     </td>
                                     <td width="25%" class="text-center">
-                                        <form action="/cup/form/{{ form.uuid }}/view/{{ item.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('{{ 'Вы действительно хотите удалить запись?'|locale }}');">
+                                        <form action="/cup/form/{{ form.uuid }}/view/{{ item.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('{{ 'Are you sure you want to delete the entry?'|locale }}');">
                                             <div class="btn-group">
                                                 <a href="/cup/form/{{ form.uuid }}/view/{{ item.uuid }}" class="btn btn-sm btn-info">
                                                     <i class="fas fa-fw fa-eye"></i>
-                                                    <span class="d-none d-md-inline-block">{{ 'Посмотреть'|locale }}</span>
+                                                    <span class="d-none d-md-inline-block">{{ 'View'|locale }}</span>
                                                 </a>
                                                 <button type="submit" class="btn btn-sm btn-danger">
                                                     <i class="fas fa-fw fa-trash-alt"></i>
-                                                    <span class="d-none d-md-inline-block">{{ 'Удалить'|locale }}</span>
+                                                    <span class="d-none d-md-inline-block">{{ 'Delete'|locale }}</span>
                                                 </button>
                                             </div>
                                         </form>
