--- a/src/Template/cup/user/subscriber/index.twig
+++ b/src/Template/cup/user/subscriber/index.twig
@@ -4,7 +4,7 @@
     <div class="page-inner py-5">
         <div class="d-flex align-items-left align-items-md-center flex-column flex-md-row">
             <div>
-                <h2 class="text-white pb-2 fw-bold">{{ 'Список подписчиков'|locale }} ({{ list.count() }})</h2>
+                <h2 class="text-white pb-2 fw-bold">{{ 'List of subscribers'|locale }} ({{ list.count() }})</h2>
             </div>
         </div>
     </div>
@@ -18,7 +18,7 @@
                     <div class="d-flex align-items-center">
                         <a href="#btn-modal-newsletter" rel="modal:open" class="btn btn-primary btn-round ml-auto">
                             <i class="fa fa-plus"></i>
-                            {{ 'Добавить адрес'|locale }}
+                            {{ 'Add address'|locale }}
                         </a>
                     </div>
                 </div>
@@ -27,7 +27,7 @@
                         {% block thead %}
                             <tr>
                                 <th>E-Mail</th>
-                                <th width="15%" class="d-none d-md-table-cell">{{ 'Дата добавления'|locale }}</th>
+                                <th width="15%" class="d-none d-md-table-cell">{{ 'Added date'|locale }}</th>
                                 <th width="20%" class="text-right"></th>
                             </tr>
                         {% endblock %}
@@ -38,11 +38,11 @@
                                     <td>{{ item.email }}</td>
                                     <td width="15%" class="d-none d-md-table-cell">{{ item.date|df('d.m.Y H:i:s') }}</td>
                                     <td width="20%" class="text-right">
-                                        <form action="/cup/user/subscriber/{{ item.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('{{ 'Вы действительно хотите удалить адрес подписчика?'|locale }}');">
+                                        <form action="/cup/user/subscriber/{{ item.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('{{ 'Are you sure you want to delete the subscriber address?'|locale }}');">
                                             <div class="btn-group">
                                                 <button type="submit" class="btn btn-sm btn-danger">
                                                     <i class="fas fa-fw fa-trash-alt"></i>
-                                                    <span class="d-none d-md-inline-block">{{ 'Удалить'|locale }}</span>
+                                                    <span class="d-none d-md-inline-block">{{ 'Delete'|locale }}</span>
                                                 </button>
                                             </div>
                                         </form>
@@ -71,7 +71,7 @@
                 </div>
                 <div class="col-12">
                     <div class="text-right" style="margin-top: 37px;">
-                        <button type="submit" class="btn btn-success">{{ 'Добавить'|locale }}</button>
+                        <button type="submit" class="btn btn-success">{{ 'Add'|locale }}</button>
                     </div>
                 </div>
             </div>
