--- a/src/Template/cup/catalog/attribute/form.twig
+++ b/src/Template/cup/catalog/attribute/form.twig
@@ -5,8 +5,8 @@
         <div class="d-flex align-items-left align-items-md-center flex-column flex-md-row">
             {% include 'cup/form-header.twig' with {
                 'item': attribute,
-                'create': 'Создание нового атрибута',
-                'update': 'Редактирование атрибута'
+                'create': 'Creating a new attribute',
+                'update': 'Editing an Attribute'
             } only %}
         </div>
     </div>
@@ -21,7 +21,7 @@
                         <div class="row">
                             <div class="col-md-6">
                                 {% include 'cup/form.twig' with {
-                                    'label': 'Наименование'|locale,
+                                    'label': 'Title'|locale,
                                     'type': 'text',
                                     'name': 'title',
                                     'args': {
@@ -32,10 +32,10 @@
                             </div>
                             <div class="col-md-6">
                                 {% include 'cup/form.twig' with {
-                                    'label': 'Адрес'|locale,
+                                    'label': 'Address'|locale,
                                     'type': 'text',
                                     'name': 'address',
-                                    'postfix': '<i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" title="' ~ ('Название атрибута. Можно оставить пустым, тогда значение будет сгенерировано автоматически. Допустимо использование только латинских символов и цифер без пробелов'|locale) ~ '"></i>',
+                                    'postfix': '<i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" title="' ~ ('Attribute name. You can leave it blank, then the value will be generated automatically. Only Latin characters and numbers without spaces are allowed'|locale) ~ '"></i>',
                                     'args': {
                                         'value': attribute.address
                                     }
@@ -43,10 +43,10 @@
                             </div>
                             <div class="col-md-6">
                                 {% include 'cup/form.twig' with {
-                                    'label': 'Тип'|locale,
+                                    'label': 'Type'|locale,
                                     'type': 'select',
                                     'name': 'type',
-                                    'message': '<b>Внимание</b>: тип "Булево" может быть добавлен только к категории.'|locale,
+                                    'message': '<b>Warning</b>: The Boolean type can only be added to a category.'|locale,
                                     'args': {
                                         'option': _(reference('/App/Domain/Types/Catalog/AttributeTypeType::LIST')),
                                         'selected': attribute.type,
