--- a/src/Template/cup/catalog/category/index.twig
+++ b/src/Template/cup/catalog/category/index.twig
@@ -4,7 +4,7 @@
     <div class="page-inner py-5">
         <div class="d-flex align-items-left align-items-md-center flex-column flex-md-row">
             <div>
-                <h2 class="text-white pb-2 fw-bold">{{ 'Список категорий'|locale }} {{ category ? 'вложенный в'|locale ~ ' ' ~ category.title : '' }} ({{ categories.where('parent', category ? category.uuid : NIL).count() }})</h2>
+                <h2 class="text-white pb-2 fw-bold">{{ 'List of categories'|locale }} {{ category ? 'embedded in'|locale ~ ' ' ~ category.title : '' }} ({{ categories.where('parent', category ? category.uuid : NIL).count() }})</h2>
             </div>
         </div>
     </div>
@@ -24,7 +24,7 @@
 
                         <a href="/cup/catalog/category/add{{ category ? '?parent=' ~ category.uuid : '' }}" class="btn btn-primary btn-round ml-auto">
                             <i class="fa fa-plus"></i>
-                            {{ 'Создать категорию'|locale }}
+                            {{ 'Create category'|locale }}
                         </a>
                     </div>
                 </div>
@@ -32,8 +32,8 @@
                     {% embed 'mixin/datatable.twig' %}
                         {% block thead %}
                             <tr>
-                                <th>{{ 'Наименование'|locale }}</th>
-                                <th width="15%">{{ 'Категория'|locale }}</th>
+                                <th>{{ 'Title'|locale }}</th>
+                                <th width="15%">{{ 'Category'|locale }}</th>
                                 <th width="45%" class="text-right"></th>
                             </tr>
                         {% endblock %}
@@ -44,23 +44,23 @@
                                     <td>{{ category.title|u.truncate(50, '...') }}</td>
                                     <td width="15%">{{ categories.where('uuid', category.parent).first().title ?? '<code>&mdash;</code>'|raw }}</td>
                                     <td width="45%" class="text-right">
-                                        <form action="/cup/catalog/category/{{ category.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('{{ 'Вы действительно хотите удалить категорию?'|locale }}');">
+                                        <form action="/cup/catalog/category/{{ category.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('{{ 'Are you sure you want to delete a category?'|locale }}');">
                                             <div class="btn-group">
                                                 <a href="/cup/catalog/category/{{ category.uuid }}" class="btn btn-sm btn-outline-info">
                                                     <i class="fas fa-fw fa-sitemap"></i>
-                                                    <span class="d-none d-md-inline-block">{{ 'Подкатегории'|locale }}</span>
+                                                    <span class="d-none d-md-inline-block">{{ 'Subcategories'|locale }}</span>
                                                 </a>
                                                 <a href="/cup/catalog/product/{{ category.uuid }}" class="btn btn-sm btn-outline-info">
                                                     <i class="fas fa-fw fa-eye"></i>
-                                                    <span class="d-none d-md-inline-block">{{ 'Номенклатура'|locale }}</span>
+                                                    <span class="d-none d-md-inline-block">{{ 'Nomenclature'|locale }}</span>
                                                 </a>
                                                 <a href="/cup/catalog/category/{{ category.uuid }}/edit" class="btn btn-sm btn-info">
                                                     <i class="fas fa-fw fa-edit"></i>
-                                                    <span class="d-none d-md-inline-block">{{ 'Изменить'|locale }}</span>
+                                                    <span class="d-none d-md-inline-block">{{ 'Change'|locale }}</span>
                                                 </a>
                                                 <button type="submit" class="btn btn-sm btn-danger">
                                                     <i class="fas fa-fw fa-trash-alt"></i>
-                                                    <span class="d-none d-md-inline-block">{{ 'Удалить'|locale }}</span>
+                                                    <span class="d-none d-md-inline-block">{{ 'Delete'|locale }}</span>
                                                 </button>
                                             </div>
                                         </form>
