--- a/src/Template/cup/catalog/order/invoice/index.twig
+++ b/src/Template/cup/catalog/order/invoice/index.twig
@@ -4,7 +4,7 @@
     <div class="page-inner py-5">
         <div class="d-flex align-items-left align-items-md-center flex-column flex-md-row">
             <div>
-                <h2 class="text-white pb-2 fw-bold">{{ 'Шаблон инвойса'|locale }}</h2>
+                <h2 class="text-white pb-2 fw-bold">{{ 'Invoice template'|locale }}</h2>
             </div>
         </div>
     </div>
@@ -29,7 +29,7 @@
                                     }
                                 } %}
 
-                                <button type="submit" class="btn btn-outline-primary mt-3">{{ 'Сохранить'|locale }}</button>
+                                <button type="submit" class="btn btn-outline-primary mt-3">{{ 'Save'|locale }}</button>
                             </div>
                         </div>
                     </form>
