--- a/src/Template/cup/guestbook/form.twig
+++ b/src/Template/cup/guestbook/form.twig
@@ -5,7 +5,7 @@
         <div class="d-flex align-items-left align-items-md-center flex-column flex-md-row">
             {% include 'cup/form-header.twig' with {
                 'item': item,
-                'update': 'Редактирование записи'
+                'update': 'Editing a post'
             } only %}
         </div>
     </div>
@@ -20,10 +20,10 @@
                         <div class="row">
                             <div class="col-md-6">
                                 {% include 'cup/form.twig' with {
-                                    'label': 'Автор'|locale,
+                                    'label': 'Author'|locale,
                                     'type': 'text',
                                     'name': 'name',
-                                    'postfix': '<i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" title="' ~ ('Нельзя изменять значение поля'|locale) ~ '"></i>',
+                                    'postfix': '<i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" title="' ~ ('Field value cannot be changed'|locale) ~ '"></i>',
                                     'args': {
                                         'value': item.name,
                                         'readonly': true
@@ -34,8 +34,8 @@
                                 {% include 'cup/form.twig' with {
                                     'label': 'E-Mail',
                                     'type': 'email',
-                                    'name': 'email',
-                                    'postfix': '<i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" title="' ~ ('Нельзя изменять значение поля'|locale) ~ '"></i>',
+                                    'type': 'email',
+                                    'postfix': '<i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" title="' ~ ('Field value cannot be changed'|locale) ~ '"></i>',
                                     'args': {
                                         'value': item.email,
                                         'readonly': true
@@ -47,7 +47,7 @@
                         <div class="row">
                             <div class="col-md-6">
                                 {% include 'cup/editor.twig' with {
-                                    'label': 'Сообщение'|locale,
+                                    'label': 'Message'|locale,
                                     'name': 'message',
                                     'args': {
                                         'value': item.message,
@@ -57,7 +57,7 @@
                             </div>
                             <div class="col-md-6">
                                 {% include 'cup/editor.twig' with {
-                                    'label': 'Ответ'|locale,
+                                    'label': 'Answer'|locale,
                                     'name': 'response',
                                     'args': {
                                         'value': item.response,
@@ -70,10 +70,10 @@
                         <div class="row">
                             <div class="col-md-6">
                                 {% include 'cup/form.twig' with {
-                                    'label': 'Дата'|locale,
+                                    'label': 'Date'|locale,
                                     'type': 'datetime',
                                     'name': 'date',
-                                    'postfix': '<i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" title="' ~ ('Нельзя изменять значение поля'|locale) ~ '"></i>',
+                                    'postfix': '<i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" title="' ~ ('Field value cannot be changed'|locale) ~ '"></i>',
                                     'args': {
                                         'value': item.date|df('Y-m-d\\TH:i'),
                                         'readonly': true
@@ -82,7 +82,7 @@
                             </div>
                             <div class="col-md-6">
                                 {% include 'cup/form.twig' with {
-                                    'label': 'Статус'|locale,
+                                    'label': 'Status'|locale,
                                     'type': 'select',
                                     'name': 'status',
                                     'args': {
