--- a/src/Template/cup/page/form.twig
+++ b/src/Template/cup/page/form.twig
@@ -5,8 +5,8 @@
         <div class="d-flex align-items-left align-items-md-center flex-column flex-md-row">
             {% include 'cup/form-header.twig' with {
                 'item': item,
-                'create': 'Создание новой страницы',
-                'update': 'Редактирование страницы'
+                'create': 'Create a new page',
+                'update': 'Page editing'
             } only %}
         </div>
     </div>
@@ -22,12 +22,12 @@
                             <ul class="nav nav-pills nav-secondary nav-pills-no-bd ml-auto" role="tablist">
                                 <li class="nav-item">
                                     <a class="nav-link active show" data-toggle="pill" href="#page" role="tab">
-                                        {{ 'Страница'|locale }}
+                                        {{ 'Page'|locale }}
                                     </a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" data-toggle="pill" href="#other" role="tab">
-                                        {{ 'Другое'|locale }}
+                                        {{ 'Other'|locale }}
                                     </a>
                                 </li>
                             </ul>
@@ -40,24 +40,24 @@
                                 <div class="row">
                                     <div class="col-md-6">
                                         {% include 'cup/form.twig' with {
-                                            'label': 'Название'|locale,
+                                            'label': 'Title'|locale,
                                             'type': 'text',
                                             'name': 'title',
-                                            'postfix': '<i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" title="' ~ ('Краткое описание страницы'|locale) ~ '"></i>',
+                                            'postfix': '<i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" title="' ~ ('Short page description'|locale) ~ '"></i>',
                                             'args': {
                                                 'value': item.title,
                                                 'required': true,
-                                                'placeholder': 'О нас'|locale,
+                                                'placeholder': 'About Us'|locale,
                                             }
                                         } %}
                                     </div>
                                     <div class="col-md-6">
                                         {% include 'cup/form.twig' with {
-                                            'label': 'Адрес'|locale,
+                                            'label': 'Address'|locale,
                                             'type': 'text',
                                             'name': 'address',
                                             'prefix': base_url() ~ '/',
-                                            'postfix': '<i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" title="' ~ ('Название страницы. Можно оставить пустым, тогда значение будет сгенерировано автоматически. Допустимо использование только латинских символов и цифер без пробелов')|locale ~ '"></i>',
+                                            'postfix': '<i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" title="' ~ ('Page title. You can leave it blank, then the value will be generated automatically. It is allowed to use only Latin characters and numbers without spaces')|locale ~ '"></i>',
                                             'args': {
                                                 'value': item.address,
                                                 'placeholder': 'about',
@@ -69,7 +69,7 @@
                                 <div class="row">
                                     <div class="col-md-12">
                                         {% include 'cup/editor.twig' with {
-                                            'label': 'Тело страницы'|locale,
+                                            'label': 'Body of the page'|locale,
                                             'name': 'content',
                                             'args': {
                                                 'value': item.content
@@ -84,7 +84,7 @@
                                 <div class="row">
                                     <div class="col-md-6">
                                         {% include 'cup/form.twig' with {
-                                            'label': 'Дата'|locale,
+                                            'label': 'Date'|locale,
                                             'type': 'datetime',
                                             'name': 'date',
                                             'args': {
@@ -97,10 +97,10 @@
                                 <div class="row">
                                     <div class="col-md-6">
                                         {% include 'cup/form.twig' with {
-                                            'label': 'Тип содержимого'|locale,
+                                            'label': 'Type of content'|locale,
                                             'type': 'select',
                                             'name': 'type',
-                                            'message': 'Если нет понимания на что влияет это поле, оставьте значение по-умолчанию'|locale,
+                                            'message': 'If there is no understanding of what this field affects, leave the default value.'|locale,
                                             'args': {
                                                 'option': _(reference('/App/Domain/Types/PageTypeType::LIST')),
                                                 'selected': item.type
@@ -109,10 +109,10 @@
                                     </div>
                                     <div class="col-md-6">
                                         {% include 'cup/form.twig' with {
-                                            'label': 'Шаблон'|locale,
+                                            'label': 'Template'|locale,
                                             'type': 'text',
                                             'name': 'template',
-                                            'postfix': '<i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" data-html="true" title="' ~ ('Укажите название шаблона, который хотите использовать для данной страницы или оставьте <b>page.twig</b>')|locale ~ '"></i>',
+                                            'postfix': '<i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" data-html="true" title="' ~ ('Specify the name of the template you want to use for this page or leave <b>page.twig</b>')|locale ~ '"></i>',
                                             'args': {
                                                 'value': item.template is not empty ? item.template : 'page.twig',
                                                 'required': true,
