--- a/src/Template/cup/publication/category/form.twig
+++ b/src/Template/cup/publication/category/form.twig
@@ -5,8 +5,8 @@
         <div class="d-flex align-items-left align-items-md-center flex-column flex-md-row">
             {% include 'cup/form-header.twig' with {
                 'item': item,
-                'create': 'Создание новой категории',
-                'update': 'Редактирование категории'
+                'create': 'Create a new category',
+                'update': 'Category editing'
             } only %}
         </div>
     </div>
@@ -21,24 +21,24 @@
                         <div class="row">
                             <div class="col-md-6">
                                 {% include 'cup/form.twig' with {
-                                    'label': 'Название'|locale,
+                                    'label': 'Title'|locale,
                                     'type': 'text',
                                     'name': 'title',
-                                    'postfix': '<i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" title="' ~ ('Название новой категории'|locale) ~ '"></i>',
+                                    'postfix': '<i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" title="' ~ ('Name of the new category'|locale) ~ '"></i>',
                                     'args': {
                                         'value': item.title,
                                         'required': true,
-                                        'placeholder': 'Новости'|locale,
+                                        'placeholder': 'News'|locale,
                                     }
                                 } %}
                             </div>
                             <div class="col-md-6">
                                 {% include 'cup/form.twig' with {
-                                    'label': 'Адрес'|locale,
+                                    'label': 'Address'|locale,
                                     'type': 'text',
                                     'name': 'address',
                                     'prefix': base_url() ~ '/',
-                                    'postfix': '<i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" title="' ~ ('Используется для просмотра всех статей в данной категории. Можно оставить пустым, тогда значение будет сгенерировано автоматически. Допустимо использование только латинских символов и цифер без пробелов'|locale) ~ '"></i>',
+                                    'postfix': '<i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" title="' ~ ('Used to view all articles in a given category. You can leave it blank, then the value will be generated automatically. It is allowed to use only Latin characters and numbers without spaces'|locale) ~ '"></i>',
                                     'args': {
                                         'value': item.address,
                                         'placeholder': 'news',
@@ -50,7 +50,7 @@
                         <div class="row">
                             <div class="col-md-12">
                                 {% include 'cup/editor.twig' with {
-                                    'label': 'Описание'|locale,
+                                    'label': 'Description'|locale,
                                     'name': 'description',
                                     'args': {
                                         'value': item.description
@@ -62,7 +62,7 @@
                         <div class="row">
                             <div class="col-md-3">
                                 {% include 'cup/form.twig' with {
-                                    'label': 'Основная категория'|locale,
+                                    'label': 'Primary category'|locale,
                                     'type': 'select',
                                     'name': 'parent',
                                     'args': {
@@ -73,7 +73,7 @@
                             </div>
                             <div class="col-md-3">
                                 {% include 'cup/form.twig' with {
-                                    'label': 'Показывать вложенные категории'|locale,
+                                    'label': 'Show nested categories'|locale,
                                     'type': 'select',
                                     'name': 'children',
                                     'args': {
@@ -84,7 +84,7 @@
                             </div>
                             <div class="col-md-3">
                                 {% include 'cup/form.twig' with {
-                                    'label': 'Количество записей на страницу'|locale,
+                                    'label': 'Number of entries per page'|locale,
                                     'type': 'text',
                                     'name': 'pagination',
                                     'args': {
@@ -94,8 +94,8 @@
                             </div>
                             <div class="col-md-3">
                                 {% include 'cup/form.twig' with {
-                                    'label': 'Публичная категория'|locale,
-                                    'message': 'Отображать ли категорию в общем списке'|locale,
+                                    'label': 'Public category'|locale,
+                                    'message': 'Whether to show the category in the general list'|locale,
                                     'type': 'select',
                                     'name': 'public',
                                     'args': {
@@ -113,7 +113,7 @@
                         <div class="row">
                             <div class="col-md-6">
                                 {% include 'cup/form.twig' with {
-                                    'label': 'Критерий сортировки'|locale,
+                                    'label': 'Sorting criteria'|locale,
                                     'type': 'select',
                                     'name': 'sort[by]',
                                     'args': {
@@ -124,7 +124,7 @@
                             </div>
                             <div class="col-md-6">
                                 {% include 'cup/form.twig' with {
-                                    'label': 'Порядок сортировки'|locale,
+                                    'label': 'Sorting order'|locale,
                                     'type': 'select',
                                     'name': 'sort[direction]',
                                     'args': {
@@ -140,10 +140,10 @@
                         <div class="row">
                             <div class="col-md-4">
                                 {% include 'cup/form.twig' with {
-                                    'label': 'Шаблон категории'|locale,
+                                    'label': 'Category template'|locale,
                                     'type': 'text',
                                     'name': 'template[list]',
-                                    'postfix': '<i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" data-html="true" title="' ~ ('Вы можете установить для данной категории отдельный шаблон или оставить <b>publication.list.twig</b>'|locale) ~ '"></i>',
+                                    'postfix': '<i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" data-html="true" title="' ~ ('You can set a separate template for this category or leave <b>publication.list.twig</b>'|locale) ~ '"></i>',
                                     'args': {
                                         'value': item.template.list is not empty ? item.template.list : 'publication.list.twig',
                                     }
@@ -152,10 +152,10 @@
 
                             <div class="col-md-4">
                                 {% include 'cup/form.twig' with {
-                                    'label': 'Шаблон краткой версии'|locale,
+                                    'label': 'Short version template'|locale,
                                     'type': 'text',
                                     'name': 'template[short]',
-                                    'postfix': '<i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" data-html="true" title="' ~ ('Укажите название шаблона, который хотите использовать для отображения краткой версии публикации или оставьте <b>publication.short.twig</b>'|locale) ~ '"></i>',
+                                    'postfix': '<i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" data-html="true" title="' ~ ('Specify the name of the template you want to use to display the short version of the publication, or leave <b>publication.short.twig</b>'|locale) ~ '"></i>',
                                     'args': {
                                         'value': item.template.short is not empty ? item.template.short : 'publication.short.twig',
                                     }
@@ -164,10 +164,10 @@
 
                             <div class="col-md-4">
                                 {% include 'cup/form.twig' with {
-                                    'label': 'Шаблон полной версии'|locale,
+                                    'label': 'Full version template'|locale,
                                     'type': 'text',
                                     'name': 'template[full]',
-                                    'postfix': '<i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" data-html="true" title="' ~ ('Укажите название шаблона, который хотите использовать для отображения полной версии публикации или оставьте <b>publication.full.twig</b>'|locale) ~ '"></i>',
+                                    'postfix': '<i class="far fa-question-circle" data-toggle="tooltip" data-placement="top" data-html="true" title="' ~ ('Specify the name of the template you want to use to display the full version of the publication, or leave <b>publication.full.twig</b>'|locale) ~ '"></i>',
                                     'args': {
                                         'value': item.template.full is not empty ? item.template.full : 'publication.full.twig',
                                     }
