--- a/src/Template/cup/publication/preview.twig
+++ b/src/Template/cup/publication/preview.twig
@@ -408,7 +408,7 @@
 {% block bodyinner %}
     <fieldset style="border-style:solid; border-width:1; border-color:black; margin: 20px;">
         <legend>
-            <span style="font-size: 10px; font-family: Verdana">{{ 'Краткое содержимое'|locale }}:</span>
+            <span style="font-size: 10px; font-family: Verdana">{{ 'Brief content'|locale }}:</span>
         </legend>
         <article class="box story">
             <div class="box_in">
@@ -429,7 +429,7 @@
 
     <fieldset style="border-style:solid; border-width:1; border-color:black; margin: 20px;">
         <legend>
-            <span style="font-size: 10px; font-family: Verdana">{{ 'Полное содержимое'|locale }}:</span>
+            <span style="font-size: 10px; font-family: Verdana">{{ 'Full content'|locale }}:</span>
         </legend>
 
         <article class="box story">
