--- a/src/Template/cup/sidebar.twig
+++ b/src/Template/cup/sidebar.twig
@@ -32,7 +32,7 @@
                             <div class="quick-content notif-center">
                                 <div data-notif-empty>
                                     <div class="text-center my-3">
-                                        {{ 'Уведомлений пока нет'|locale }}
+                                        {{ 'Notifications yet'|locale }}
                                     </div>
                                 </div>
 
@@ -56,7 +56,7 @@
                             <div class="list-group list-group-file-item list-group-reflow list-group-flush list-group-divider">
                                 <div data-task-empty>
                                     <div class="text-center my-3">
-                                        {{ 'Нет данных о фоновых задачах'|locale }}
+                                        {{ 'No data about background tasks'|locale }}
                                     </div>
                                 </div>
 
@@ -82,11 +82,11 @@
                 <div class="quick-wrapper">
                     <div class="quick-scroll scrollbar-outer">
                         <div class="quick-content">
-                            <form action="/cup/task/run" method="post" class="row m-0" onsubmit="return confirm('{{ 'Вы действительно хотите выполнить это действие сейчас?'|locale }}');">
+                            <form action="/cup/task/run" method="post" class="row m-0" onsubmit="return confirm('{{ 'Are you sure you want to perform this action now?'|locale }}');">
                                 <button type="submit" name="task" value="App\Domain\Tasks\SearchIndexTask" class="col-12 btn btn-dark">
                                     <div class="quick-actions-item">
                                         <i class="fas fa-search"></i>
-                                        <span class="text">{{ 'Обновить поисковый индекс'|locale }}</span>
+                                        <span class="text">{{ 'Update search index'|locale }}</span>
                                     </div>
                                 </button>
                             </form>
@@ -143,32 +143,32 @@
                             switch (task.status) {
                                 case 'queue': {
                                     color = 'text-muted';
-                                    text = '{{ 'Очередь'|locale }}';
+                                    text = '{{ 'Queue'|locale }}';
                                     break;
                                 }
                                 case 'work': {
                                     color = 'text-info';
-                                    text = '{{ 'Работает'|locale }}';
+                                    text = '{{ 'Work'|locale }}';
                                     break;
                                 }
                                 case 'done': {
                                     color = 'text-success';
-                                    text = '{{ 'Выполнено'|locale }}';
+                                    text = '{{ 'Done'|locale }}';
                                     break;
                                 }
                                 case 'fail': {
                                     color = 'text-danger';
-                                    text = '{{ 'Ошибка'|locale }}';
+                                    text = '{{ 'Error'|locale }}';
                                     break;
                                 }
                                 case 'cancel': {
                                     color = 'text-warning';
-                                    text = '{{ 'Отменено'|locale }}';
+                                    text = '{{ 'Canceled'|locale }}';
                                     break;
                                 }
                                 case 'delete': {
                                     color = 'text-warning';
-                                    text = '{{ 'Удалено'|locale }}';
+                                    text = '{{ 'Deleted'|locale }}';
                                     break;
                                 }
                             }
